--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/adaptive.css">
+    <link rel="stylesheet" href="/Portfolio/css/main.css">
+    <link rel="stylesheet" href="/Portfolio/css/adaptive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
@@ -35,14 +35,14 @@
         <div class="main">
             <div class="info1">
                 <div class="Hello">
-                    <video src="/video/HelloVideo.mp4" autoplay muted loop></video>
+                    <video src="/Portfolio/video/HelloVideo.mp4" autoplay muted loop></video>
                     <h1> ПРИВЕТ, Я МАТВЕЙ</h1>
                 </div>
                 <div class="portf">
                     <p class="portfi">Это мое портфолио</p>
                 </div>
                 <div class="img-arrow-down">
-                    <img src="/imageicon/2560px-Arrow-down.svg.png" alt="">
+                    <img src="/Portfolio/imageicon/2560px-Arrow-down.svg.png" alt="">
                 </div>
             </div>
             <main>
@@ -64,12 +64,12 @@
                     </div>
 
                     <div class="infoImage">
-                        <img src="/images/c.png" data-value="-2" alt="" class="cSharp " id="prlximg">
+                        <img src="/Portfolio/images/c.png" data-value="-2" alt="" class="cSharp " id="prlximg">
                         <img src="/images/itcube.png" data-value="-3" alt="" class="itCube" id="prlximg">
-                        <img src="/images/java.png" data-value="2" alt="" class="java" id="prlximg">
-                        <img src="/images/js.png" data-value="-3" alt="" class="JavaScript" id="prlximg">
-                        <img src="/images/simplex.png" data-value="3" alt="" class="simplex" id="prlximg">
-                        <img src="/imageicon/unityicon.png" data-value="4" alt="" class="unity" id="prlximg">
+                        <img src="/Portfolio/images/java.png" data-value="2" alt="" class="java" id="prlximg">
+                        <img src="/Portfolio/images/js.png" data-value="-3" alt="" class="JavaScript" id="prlximg">
+                        <img src="/Portfolio/images/simplex.png" data-value="3" alt="" class="simplex" id="prlximg">
+                        <img src="/Portfolio/imageicon/unityicon.png" data-value="4" alt="" class="unity" id="prlximg">
                     </div>
                 </div>
 
@@ -117,7 +117,7 @@
                         </ul>
                     </div>
                     <div class="imagehead">
-                        <img src="/images/e1a5752c3d4a1aa3ad34223f221443da.gif" alt="">
+                        <img src="/Portfolio/images/e1a5752c3d4a1aa3ad34223f221443da.gif" alt="">
                     </div>
 
 
@@ -133,7 +133,7 @@
                     <div class="cardproject">
                         <div class="card1 ">
                             <div class="image">
-                                <img src="/imageproject/passgen.png" alt="">
+                                <img src="/Portfolio/imageproject/passgen.png" alt="">
                             </div>
                             <div class="content">
                                 <div class="title">
@@ -152,7 +152,7 @@
                         </div>
                         <div class="card2 ">
                             <div class="image">
-                                <img src="/imageproject/timerimage.png" alt="">
+                                <img src="/Portfolio/imageproject/timerimage.png" alt="">
                             </div>
                             <div class="content">
                                 <div class="title">
@@ -171,7 +171,7 @@
                         </div>
                         <div class="card3 ">
                             <div class="image">
-                                <img src="/imageproject/warehouse.png" alt="">
+                                <img src="/Portfolio/imageproject/warehouse.png" alt="">
                             </div>
                             <div class="content">
                                 <div class="title">
@@ -192,7 +192,7 @@
                         </div>
                         <div class="card4">
                             <div class="image">
-                                <img src="/imageproject/passgencsharp.png" alt="">
+                                <img src="/Portfolio/imageproject/passgencsharp.png" alt="">
                             </div>
                             <div class="content">
                                 <div class="title">
@@ -212,7 +212,7 @@
                         </div>
                         <div class="card5">
                             <div class="image">
-                                <img src="/imageproject/dicecsharp.png" alt="">
+                                <img src="/Portfolio/imageproject/dicecsharp.png" alt="">
                             </div>
                             <div class="content">
                                 <div class="title">
@@ -241,25 +241,25 @@
                 мобильное приложение.
             </p>
             <div class="arrow-back arrowAnimation">
-                <img src="/imageicon/arrow.png" alt="next" class="iconarrow">
+                <img src="/Portfolio/imageicon/arrow.png" alt="next" class="iconarrow">
             </div>
 
 
             <div class="sliderWrapper">
                 <div class="sliderInner">
                     <div class="slide">
-                        <img src="/screenpractice/1.png" alt="first">
+                        <img src="/Portfolio/screenpractice/1.png" alt="first">
                     </div>
                     <div class="slide">
-                        <img src="/screenpractice/2.png" alt="second">
+                        <img src="/Portfolio/screenpractice/2.png" alt="second">
                     </div>
                     <div class="slide">
-                        <img src="/screenpractice/3.png" alt="third">
+                        <img src="/Portfolio/screenpractice/3.png" alt="third">
                     </div>
                 </div>
             </div>
             <div class="arrow-next arrowAnimation">
-                <img src="/imageicon/arrow.png" alt="back" class="iconarrow1">
+                <img src="/Portfolio/imageicon/arrow.png" alt="back" class="iconarrow1">
             </div>
 
         </div>
@@ -272,7 +272,7 @@
         </div>
     </div>
 
-    <script src="/js/script.js"></script>
+    <script src="/Portfolio/js/script.js"></script>
 </body>
 
 </html>
