--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     </div>
 
                     <div class="infoImage">
-                        <img src="/Portfolio/images/c.png" data-value="-2" alt="" class="cSharp " id="prlximg">
-                        <img src="/images/itcube.png" data-value="-3" alt="" class="itCube" id="prlximg">
+                        <img src="/Portfolio/images/c.png" data-value="-2" alt="" class="cSharp" id="prlximg">
+                        <img src="/Portfolio/images/itcube.png" data-value="-3" alt="" class="itCube" id="prlximg">
                         <img src="/Portfolio/images/java.png" data-value="2" alt="" class="java" id="prlximg">
                         <img src="/Portfolio/images/js.png" data-value="-3" alt="" class="JavaScript" id="prlximg">
                         <img src="/Portfolio/images/simplex.png" data-value="3" alt="" class="simplex" id="prlximg">
