--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
                         <h1>Основная информация</h1>
                         <p class="animationItem oInfo">Я Черняев Матвей, мне 19 лет. В данный момент учусь по
                             специальности "Информационные
-                            технологии" в СПО ЛГТУ на 3 курсе. Есть опыт работы в разработке внутри компании.Ниже есть
-                            приложение со стажировки.
-                            Окончил курсы "Программирование на Java" от 1С и Samsung IT School(Java).Был не большой опыт
-                            разработке
+                            технологии" в СПО ЛГТУ на 4 курсе. Есть опыт работы в разработке внутри компании. Ниже есть
+                            приложение со стажировки. Окончил курсы "Программирование на Java" от 1С и Samsung IT School(Java). Есть не большой опыт
+                            разработки
                             смарт контрактов на Solidity внутри эфириума.
                             Очень хотел бы начать
                             продвигаться в IT сфере.
@@ -235,8 +234,8 @@
 
         <div class="practice" id="practice">
             <H1>Проходил стажировку в компании Симплекс</H1>
-            <p class="pract animationItem">Разработал подситему для добавления рекламы/блоков разных типов с мобильное
-                приложение СиМед.Для разработки использоволся C#, MicrosoftSQL server
+            <p class="pract animationItem">Разработал подситему для добавления рекламы/блоков разных типов для мобильного
+                приложение СиМед. Для разработки использоволся C#, MicrosoftSQL server
                 Суть приложения что-бы пользователей мог добвлять какие то новости, рекламу и т.д. с компьютера в свое
                 мобильное приложение.
             </p>
